--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Four card feature section</title>
+
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <header class="header">
+        <h1 class="header__text">Reliable, efficient delivery <span class="bold inline-box">Powered by Technology</span></h1>
+        <p> Our Artificial Intelligence powered tools use millions of project data points
+            to ensure that your project is successful</p>
+    </header>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <main class="featured-cards-grid">
+        <article class="card green-top-accent">
+            <section class="card__text-area">
+                <h3>Supervisor</h3>
+                <p>Monitors activity to identify project roadblocks</p>
+            </section>
+            <img src="assets/images/icon-supervisor.svg" alt="Magnifiying Glass" class="card__icon">
+        </article>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <article class="card red-top-accent">
+            <section class="card__text-area">
+                <h3>Team Builder</h3>
+                <p >Scans our talent network to create the optimal team for your project</p>
+            </section>
+            <img src="assets/images/icon-team-builder.svg" alt="Magnifiying Glass" class="card__icon">
+        </article>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+        <article class="card yellow-top-accent">
+            <section class="card__text-area">
+                <h3>Karma</h3>
+                <p >Regularly evaluates our talent to ensure quality</p>
+            </section>
+            <img src="assets/images/icon-karma.svg" alt="Magnifiying Glass" class="card__icon">
+        </article>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        <article class="card blue-top-accent">
+            <section class="card__text-area">
+                <h3>Calculator</h3>
+                <p>Uses data from past projects to provide better delivery estimates</p>
+            </section>
+            <img src="assets/images/icon-calculator.svg" alt="Magnifiying Glass" class="card__icon">
+        </article>
+    </main>
 </body>
 </html>
